--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  <!-- Pantalla de Login -->
  <script>
   if (!localStorage.getItem("usuarioAutenticado")) {
-    window.location.href = ".login.html";
+    window.location.href = "./login.html";
   }
 </script>
 
@@ -81,7 +81,7 @@
 
 <main>
 <section id="main-content" class="bienvenida">
-  <img src="./img/img01.jpeg" alt="Pareja de novios" class="img-fluid w-100 w-md-75 w-lg-50">
+  <img src="./img/img01.jpeg" alt="Profesora posando" class="img-fluid w-100 w-md-75 w-lg-50">
   <div class="text-container">
     <h2>Bienvenidos</h2>
         <p>Soy estudiante de Medicina en la UNR (Universidad Nacional de Rosario), con 24 años y una vocación profunda por compartir el conocimiento. Doy clases a alumnos de habla hispana y también a quienes hablan portugués, adaptando cada clase para que el aprendizaje sea claro, visual y motivador. Mi objetivo es acompañar a cada estudiante en su camino con compromiso y dedicación.</p>
