--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Inicio | Gabs-Aulas</title>
 
   <!-- Meta etiquetas para SEO -->
-  <meta name="keywords" content="fotografía de bodas, fotógrafo documental, fotografía profesional, Trejo Studios, fotografía creativa, sesiones de fotos, fotos de casamiento, fotógrafo de eventos, fotografía emocional, fotógrafo Santiago Trejo, fotos artísticas, fotografía de pareja, sesiones románticas, fotografía natural, fotógrafo Argentina">
-  <meta name="description" content="Bienvenido a Trejo Studios, donde capturamos momentos únicos y emocionantes. Especializados en fotografía de bodas y eventos, ofrecemos un enfoque creativo y profesional para inmortalizar tus recuerdos más preciados.">
-  <meta name="author" content="Santiago Trejo">
+  <meta name="keywords" content="mentoría medicina, clases de medicina, aula virtual medicina, anatomía, fisiología, histología, bioquímica, microbiología, inmunología, patología, farmacología, clínica médica, clases grabadas medicina, exámenes resueltos medicina, tutorías medicina, apoyo académico medicina">
+  <meta name="description" content="Mentoría en medicina con clases virtuales, grabadas y tutorías personalizadas. Accede a packs de estudio con exámenes resueltos, guías exclusivas y preparación intensiva en materias como anatomía, fisiología, bioquímica, patología, farmacología y más.">
+  <meta name="author" content="Gabriella Moraes Da Costa">
+
+  <!-- Icono de la página -->
+  <link rel="icon" href="#" alt="icono del logo" type="image/x-icon">
 
   <!-- Estilo CSS-->
   <link rel="stylesheet" href="./css/style.css">
@@ -18,19 +22,14 @@
 
   <!-- Fuentes -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-   <!-- <link rel="preload" href="./fonts/HelveticaNeueRegular.ttf">  -->
+  <!-- <link rel="preload" href="./fonts/HelveticaNeueRegular.ttf">  -->
 
-  <!-- Icono de la página -->
-  <link rel="icon" href="#" alt="icono del logo" type="image/x-icon">
-
- <!-- Bootstrap -->
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-
-
 </head>
-<body>
+<body class="dark-mode">
 
  <!-- Pantalla de Login -->
  <script>
@@ -39,7 +38,6 @@
   }
 </script>
 
-
 <!--HEADER-->
 <header class="container-fluid d-flex justify-content-between align-items-center px-3 py-2 border-bottom" id="top-menu">
   <!-- Logo -->
@@ -47,7 +45,7 @@
     <b>GM</b>| Aulas
   </div>
 
-  <!-- Botón hamburguesa siempre visible (mobile y desktop) -->
+  <!-- Botón hamburguesa (mobile y desktop) -->
   <button class="border-0 bg-transparent" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu" aria-controls="offcanvasMenu">
     <i class="bi bi-list fs-2"></i>
   </button>
@@ -61,11 +59,12 @@
     <div class="offcanvas-body">
       <ul class="navbar-nav text-end">
         <li class="nav-item"><a class="nav-link" href="./index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Clases</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Suscripciones</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Clases</a></li> 
+        <li class="nav-item"><a class="nav-link" href="./pages/servicios.html">Suscripciones</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Sobre mí</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
         <button onclick="cerrarSesion()">Cerrar sesión</button>
+        <button id="toggle-dark" class="modo-btn">🌙</button>
       </ul>
     </div>
   </div>
@@ -81,12 +80,23 @@
 
 <main>
 <section id="main-content" class="bienvenida">
-  <img src="./img/img01.jpeg" alt="Profesora posando" class="img-fluid w-100 w-md-75 w-lg-50">
-  <div class="text-container">
-    <h2>Bienvenidos</h2>
-        <p>Soy estudiante de Medicina en la UNR (Universidad Nacional de Rosario), con 24 años y una vocación profunda por compartir el conocimiento. Doy clases a alumnos de habla hispana y también a quienes hablan portugués, adaptando cada clase para que el aprendizaje sea claro, visual y motivador. Mi objetivo es acompañar a cada estudiante en su camino con compromiso y dedicación.</p>
-  </div>
-</section>
+    <img src="./img/img01.jpeg" alt="Profesora de Medicina" class="img-fluid w-100 w-md-75 w-lg-50">
+    
+    <div class="text-container">
+      <h2>MENTORÍA EN MEDICINA</h2>
+      <p>
+        Creemos que cada estudiante tiene un camino único en la medicina, digno de ser acompañado con dedicación y excelencia académica. 
+        Como equipo de mentores especializados en distintas áreas médicas, nuestra pasión es ayudarte a comprender en profundidad 
+        asignaturas clave como <strong>Anatomía, Fisiología, Bioquímica, Patología y Farmacología</strong>. 
+      </p>
+      <p>
+        Nuestro enfoque va más allá de las clases tradicionales: buscamos la claridad, la práctica aplicada y la construcción de 
+        un conocimiento sólido que te prepare para exámenes, prácticas y tu futuro profesional. 
+        Queremos que cada clase no solo te enseñe, sino que te acerque a convertirte en el profesional que soñás ser.
+      </p>
+    </div>
+  </section>
+
 <section >
   <div class="text-container2 responsive-body">
     <!--<h2>CREANDO MOMENTOS UNICOS</h2>
@@ -115,7 +125,7 @@
   </main>
 
  <!--Foooter-->
-  <footer class="footer">
+  <footer class="footer ">
         <p>&copy; 2025 Gabrielle Moraes Da Costa | MuchasAulas. Todos los derechos reservados.</p>
         <div class="redes-sociales">
             <a href="https://www.instagram.com/med.congabi?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
@@ -124,7 +134,7 @@
             <a href="#" target="_blank">
                 <i class="fab fa-facebook" title="Facebook"></i>
             </a>
-            <a href="#" target="_blank"> <!-- https://wa.me/+5493417195275 -->
+            <a href="#" target="_blank"> <!-- https://wa.me/+54 -->
                 <i class="fab fa-whatsapp" title="WhatsApp"></i>
             </a>
         </div>
@@ -142,6 +152,7 @@
 
  <script src="./js/app.js"></script>
  
+ <!--Login-->
  <script>
  function cerrarSesion() {
     localStorage.removeItem("usuarioAutenticado");
@@ -149,5 +160,26 @@
     window.location.href = "./login/login.html";
   }
   </script>
+
+  <!-- JS del dark mode -->
+   <script>
+  const btn = document.getElementById("toggle-dark");
+
+  btn.addEventListener("click", () => {
+    document.body.classList.toggle("dark-mode");
+
+    // Guardar preferencia en localStorage
+    if(document.body.classList.contains("dark-mode")){
+      localStorage.setItem("theme", "dark");
+    } else {
+      localStorage.setItem("theme", "light");
+    }
+  });
+
+  // Al cargar la página, recuperar preferencia
+  if(localStorage.getItem("theme") === "dark"){
+    document.body.classList.add("dark-mode");
+  }
+</script>
   </body>
 </html>
